# eie_nrf52840

./: CMakeLists.txt
Notes/: sesh1.txt
app/: CMakeLists.txt  prj.conf
app/src/: main.c  main12.c  my_state_machine.c  my_state_machine.h
